--- a/MVC_Kutuphane_Otomasyonu/MVC_Kutuphane_Otomasyonu.csproj
+++ b/MVC_Kutuphane_Otomasyonu/MVC_Kutuphane_Otomasyonu.csproj
@@ -63,6 +63,12 @@
       <HintPath>..\packages\FluentValidation.ValidatorAttribute.8.6.1\lib\net45\FluentValidation.ValidatorAttribute.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Annotations, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ComponentModel.Annotations.4.4.1\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
@@ -142,11 +148,16 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DuyurularController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KitaplarController.cs" />
     <Compile Include="Controllers\KitapTurleriController.cs" />
+    <Compile Include="Controllers\KullanicilarController.cs" />
+    <Compile Include="Controllers\KullaniciRolleriController.cs" />
+    <Compile Include="Controllers\RollerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RolTanimi\KullaniciRol.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AdminDashboard\admincast-master\.gitignore" />
@@ -4501,9 +4512,11 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="JavaScript.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -5210,6 +5223,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Style.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -5224,15 +5238,30 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Duyurular\Create.cshtml" />
-    <Content Include="Views\Duyurular\Delete.cshtml" />
-    <Content Include="Views\Duyurular\Details.cshtml" />
-    <Content Include="Views\Duyurular\Edit.cshtml" />
-    <Content Include="Views\Duyurular\Index.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\Home\AdminIndex.cshtml" />
     <Content Include="Views\KitapTurleri\Index.cshtml" />
     <Content Include="Views\KitapTurleri\Ekle.cshtml" />
+    <Content Include="Views\KitapTurleri\Duzenle.cshtml" />
+    <Content Include="Views\Kitaplar\Index.cshtml" />
+    <Content Include="Views\Kitaplar\Detay.cshtml" />
+    <Content Include="Views\Kitaplar\Ekle.cshtml" />
+    <Content Include="Views\Kitaplar\Duzenle.cshtml" />
+    <Content Include="Views\Duyurular\Index.cshtml" />
+    <Content Include="Views\Duyurular\_PartialDuyuru.cshtml" />
+    <Content Include="Views\Kullanicilar\Login.cshtml" />
+    <Content Include="Views\Kullanicilar\KayitOl.cshtml" />
+    <Content Include="Views\Kullanicilar\SifremiUnuttum.cshtml" />
+    <Content Include="Views\Kullanicilar\Index.cshtml" />
+    <Content Include="Views\Kullanicilar\KRolleri.cshtml" />
+    <Content Include="Views\Kullanicilar\Index2.cshtml" />
+    <Content Include="Views\Kullanicilar\Ekle.cshtml" />
+    <Content Include="Views\Kullanicilar\Duzenle.cshtml" />
+    <Content Include="Views\KullaniciRolleri\Ekle.cshtml" />
+    <Content Include="Views\KullaniciRolleri\Duzenle.cshtml" />
+    <Content Include="Views\Roller\Index.cshtml" />
+    <Content Include="Views\Roller\Ekle.cshtml" />
+    <Content Include="Views\Roller\Duzenle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
