--- a/MVC_Kutuphane_Otomasyonu/Web.config
+++ b/MVC_Kutuphane_Otomasyonu/Web.config
@@ -17,6 +17,19 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <authentication mode="Forms">
+		  <forms loginUrl="/Kullanicilar/Login/" timeout="15" slidingExpiration="true">
+			  
+		  </forms>
+		  
+	  </authentication>
+
+	  <roleManager enabled="true" defaultProvider="roller">
+		  <providers>
+			  <add name="roller" type="MVC_Kutuphane_Otomasyonu.RolTanimi.KullaniciRol"/>
+		  </providers>
+	  </roleManager>
+	  
   </system.web>
   <connectionStrings>
     <add name="Kutuphane" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MVCKutuphane;Integrated Security=True;" providerName="System.Data.SqlClient" />
@@ -49,7 +62,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
