--- a/MVC_Kutuphane_Otomasyonu_Entities/MVC_Kutuphane_Otomasyonu_Entities.csproj
+++ b/MVC_Kutuphane_Otomasyonu_Entities/MVC_Kutuphane_Otomasyonu_Entities.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Model\KullanıcıRolleri.cs" />
     <Compile Include="Model\Roller.cs" />
     <Compile Include="Model\Uyeler.cs" />
+    <Compile Include="Model\ViewModel\KullaniciRolViewModel.cs" />
     <Compile Include="Model\İletisim.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
